--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </script>
 </head>
 <body>
-    <iframe width="100%" height="100%" src="https://youtu.be/dQw4w9WgXcQ?si=uwSShbFqpdlb212A&t=43" frameborder="0" allow="autoplay"></iframe>
+    <iframe width="100%" height="100%" allow="autoplay" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=R6hOH6hcDvE4xMuM&amp;start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
