--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <script>
         setTimeout(function() {
             window.location.href = "https://github.com/orcasecurity/orca-cloud-platform/pull/3162";
-        }, 5000); 
+        }, 3000); 
     </script>
 </head>
 <body>
-    <iframe width="100%" height="100%" allow="autoplay" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=R6hOH6hcDvE4xMuM&amp;start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=R6hOH6hcDvE4xMuM&amp;start=43&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
